# unity3d-injector

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  inject  main.cpp  mono.cpp  types.h  unity3d_inject.cbp
src/: main.cpp  main.h  mono.cpp  mono.h  utility.cpp  utility.h
